[gd_scene load_steps=4 format=3 uid="uid://elskx0dxj2ag"]

[ext_resource type="Script" path="res://scene/story/game_over_win.gd" id="1_iwsew"]
[ext_resource type="PackedScene" uid="uid://v20ld87cbkl3" path="res://scene/story/fade_screen.tscn" id="1_kxsqv"]
[ext_resource type="Texture2D" uid="uid://xp5k4w74fa3o" path="res://icon.svg" id="2_68ff8"]

[node name="GameOverWin" type="Node"]
script = ExtResource("1_iwsew")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer"]
offset_left = 512.0
offset_top = 137.0
offset_right = 640.0
offset_bottom = 265.0
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource("2_68ff8")

[node name="Story" type="RichTextLabel" parent="Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
offset_left = 326.0
offset_top = 427.0
offset_right = 826.0
offset_bottom = 627.0
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 0.6
bbcode_enabled = true
text = "[center]Qui quisquam quisquam eveniet dolor rerum [b]magni unde[/b] perferendis. A nobis [b][color=red]explicabo[/color][/b] nam. Cupiditate praesentium possimus nihil dicta impedit cupiditate eos. Vel eveniet voluptas qui dolore.[/center]"
visible_characters = 0
visible_ratio = 0.0

[node name="Timer" type="Timer" parent="Control/VBoxContainer/Story"]
wait_time = 0.05

[node name="Next" type="Button" parent="Control"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -84.0
grow_horizontal = 0
grow_vertical = 0
text = "quit"

[node name="Fade" parent="." instance=ExtResource("1_kxsqv")]
metadata/_edit_lock_ = true

[connection signal="timeout" from="Control/VBoxContainer/Story/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Control/Next" to="." method="_on_next_pressed"]
[connection signal="completed_fade_in" from="Fade" to="." method="_on_fade_completed_fade_in"]
[connection signal="completed_fade_out" from="Fade" to="." method="_on_fade_completed_fade_out"]
